$Id$

2018-09-12  Christian Franke  <franke@computer.org>

	ataprint.cpp: Get JSON values 'temperature.op_limit_min/max' from
	Device Statistics.

	atacmds.h, ataprint.cpp: Print ACS-4 max operating temperature
	from SCT Status.

	Makefile.am: Remove define of 'HAVE_GETOPT_LONG'.
	os*.cpp: Remove remaining checks for 'HAVE_GETOPT_LONG'.

	configure.ac: Remove check for 'uname()'.
	os_generic.cpp, os_qnxnto.cpp: Remove function 'unsupported()'.

	drivedb.h:
	- HGST Deskstar NAS: *6040ALE614 (#935, #1089)
	- HGST Ultrastar DC HC520 (He12) (#1086)

2018-09-12  Anthony D'Atri  <anthony.datri@gmail.com>

	drivedb.h: Micron 5100 Pro / 5200 SSDs (#1071)

2018-09-11  Oleksii Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: Fix build on FreeBSD 12, patch by fernape@

2018-09-10  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Enterprise Capacity 3.5 HDD: V5.1 (#1087)
	- Seagate Exos X12 HDD (#1042, #1046)
	- Western Digital VelociRaptor (AF): WD5000BHTZ (patch from #1041)

2018-09-10  David Purdy  <david.c.purdy@gmail.com>

	drivedb.h: Phison Driven SSDs: Kingston A400 (#801)

2018-09-02  Christian Franke  <franke@computer.org>

	dev_intelliprop.h: Fix copyright info.

	ataprint.cpp, nvmeprint.cpp: Change JSON value 'power_on_hours'
	to 'power_on_time.hours'.  Add '.minutes' if available.
	scsiprint.cpp: Add JSON values 'power_on_time.hours/minutes' from
	Seagate factory lpage or from background scan lpage.

2018-08-20  Christian Franke  <franke@computer.org>

	Add missing license headers to some source files.

2018-08-19  Christian Franke  <franke@computer.org>

	Add SPDX-License-Identifier to all files with GPL header (#919).
	Remove GPL headers.  Remove outdated info about smartsuite.

	getopt/*, regex/*: Replace with current version from glibc 2.28
	(2018-08-01).  Add _GETOPT/REGEX*_STANDALONE configurations.
	Makefile.am, os_win32/vc14/smart*.vcxproj*: Set *_STANDALONE.
	Add new files.

	examplescripts/README: Update mailing list address.